fix(portfolio-v2): margin top spacing

--- a/styles.css
+++ b/styles.css
@@ -170,7 +170,7 @@ p {
 
 .project-section > h4 {
   font-size: 32px;
-  margin: 60px 0 20px 0;
+  margin: 70px 0 20px 0;
   padding: 0;
 }
 
@@ -347,7 +347,7 @@ p {
   }
 
   .project-section > h4 {
-    margin: 80px 0 40px 0;
+    margin: 100px 0 40px 0;
     font-size: 48px;
   }
 
